--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <hr class="my-4 bg-light">
               <p>Specializing in Go, Java and Javascript, but with a drive to learn new languages and frameworks</p>
               <p class="lead">
-                <a id="contact_button" class="btn bg-white btn-md font-weight-bold p-2 mt-2" href="mailto:cal13199@gmail.com" role="button">&nbsp;&nbsp;Reach out →&nbsp;&nbsp;</a>
+                <a id="contact_button" class="btn bg-white btn-md font-weight-bold p-2 mt-2" href="mailto:--" role="button">&nbsp;&nbsp;Reach out →&nbsp;&nbsp;</a>
               </p>
             </div>
           </div>
@@ -73,8 +73,8 @@
                         <ul class="list-group list-group-flush text-white">
                           <li class="list-group-item bg-dark"><h3 class="display-5">About</h3></li>
                           <a name="about"></a>
-                            <li class="list-group-item bg-dark pt-4"><div class="row"><div class="col-xl-3">Email:</div><div class="col-xl-8"><a href="mailto:cal13199@gmail.com">cal13199@gmail.com</a></div></div></li>
-                            <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-3">LinkedIn:</div><div class="col-xl-8"><a href="https://www.linkedin.com/in/calin-gilan/">https://www.linkedin.com/in/calin-gilan/</a></div></div></li>
+                            <li class="list-group-item bg-dark pt-4"><div class="row"><div class="col-xl-3">Email:</div><div class="col-xl-8"><a href="mailto:--@gmail.com">--@gmail.com</a></div></div></li>
+                            <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-3">LinkedIn:</div><div class="col-xl-8"><a href="https://www.linkedin.com/in/--/">https://www.linkedin.com/in/--/</a></div></div></li>
                         </ul>
                         </div>
             </div>
