--- a/index.html
+++ b/index.html
@@ -1,92 +1,95 @@
-<!DOCTYPE HTML>
+<!doctype html>
 <html lang="en">
-    <head>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <meta charset="utf-8">
-        <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700&display=swap" rel="stylesheet"> 
-        <title>Calin Gilan | Software Engineer</title>
-        <meta name="description" content="">
-        <link rel="stylesheet" href="styles.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    </head>
-    <body class="bg-dark">
-        <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-            <div class="container">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                  <a class="nav-link text-white" href="#home">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="#experience">Experience</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-white" href="#education">Education</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-white" href="#about">Contact</a>
-                  </li>
-              </ul>
-            </div>
-          </nav>
-          <a name="home"></a>
-          <div class="jumbotron jumbotron-fluid bg-primary">
-            <div class="container text-white">
-              <div class="row">
-                <div class="col-xl-6">
-                  <h1 class="display-4">Hi, I'm Calin Gilan</h1>
-                  <p class="lead">Full Stack Software Developer</p>
-              </div>
-              <div class="col-xl-6">
-                <img src="me.jpg" alt="Calin Gilan" class="rounded-circle">
-              </div>
-            </div>
-              <hr class="my-4 bg-light">
-              <p>Specializing in Go, Java and Javascript, but with a drive to learn new languages and frameworks</p>
-              <p class="lead">
-                <a id="contact_button" class="btn bg-white btn-md font-weight-bold p-2 mt-2" href="mailto:--" role="button">&nbsp;&nbsp;Reach out →&nbsp;&nbsp;</a>
-              </p>
-            </div>
-          </div>
 
-          <div class="container">
-            <div class="row">
-                <div class="col-xl-4">
-                    <ul class="list-group list-group-flush text-white">
-                      <li class="list-group-item bg-dark"><h3 class="display-5">Experience</h3></li>
-                        <a name="experience"></a>
-                        <li class="list-group-item bg-dark pt-4"><h5 class="display-6">Capital One</h5></li>
-                        <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-4">Mclean, VA</div><div class="col-xl-8">Sept. 2018 - Present</div></div></li>
-                        <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-4">Richmond, VA</div><div class="col-xl-8">Sept. 2017 - Sept. 2018</div></div></li>
-                        <li class="list-group-item bg-dark"><h5 class="display-6">iCIMS, inc</h5></li>
-                        <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-4">Matawan, NJ</div><div class="col-xl-8">June. 2016 - Aug. 2016</div></div></li>
-                    </ul>
-                    </div>
-                    <div class="col-xl-4">
-                    <ul class="list-group list-group-flush text-white">
-                      <li class="list-group-item bg-dark"><h3 class="display-5">Education</h3></li>
-                      <a name="education"></a>
-                      <li class="list-group-item bg-dark pt-4"><h5 class="display-6">Rutgers University</h5></li>
-                      <li class="list-group-item bg-dark">Bachelor of Computer Science </li>
-                    </ul>
-                    </div>
-                    <div class="col-xl-4 mb-4">
-                        <ul class="list-group list-group-flush text-white">
-                          <li class="list-group-item bg-dark"><h3 class="display-5">About</h3></li>
-                          <a name="about"></a>
-                            <li class="list-group-item bg-dark pt-4"><div class="row"><div class="col-xl-3">Email:</div><div class="col-xl-8"><a href="mailto:--@gmail.com">--@gmail.com</a></div></div></li>
-                            <li class="list-group-item bg-dark"><div class="row"><div class="col-xl-3">LinkedIn:</div><div class="col-xl-8"><a href="https://www.linkedin.com/in/--/">https://www.linkedin.com/in/--/</a></div></div></li>
-                        </ul>
-                        </div>
-            </div>
-            </div>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="Calin Gilan">
+  <title>Calin Gilan | Software Engineer</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.2.2/font/bootstrap-icons.css">
+
+
+
+
+
+  <style>
+    .bd-placeholder-img {
+      font-size: 1.125rem;
+      text-anchor: middle;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      user-select: none;
+    }
+
+    @media (min-width: 768px) {
+      .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+      }
+    }
+  </style>
+
+
+  <!-- Custom styles for this template -->
+  <link href="starter-template.css" rel="stylesheet">
+</head>
+
+<body>
+  <div class="col-lg-8 mx-auto p-3 py-md-5">
+    <header class="d-flex align-items-center pb-3 mb-5">
+
+    </header>
+
+    <main>
+      <h1>Hi, I'm Calin Gilan</h1>
+      <p class="fs-5 col-md-8">Full Stack Software Engineer specializing in Go, Java and Javascript, but with a drive to
+        learn new languages and
+        frameworks
+      </p>
+
+      <hr class="col-3 col-md-2 mb-5">
+
+      <div class="row g-5">
+        <div class="col-md-4">
+          <h2>Job History</h2>
+          <ul class="icon-list">
+            <li>Microsoft | 2021 - Present</li>
+            <li>Capital One | 2017 - 2021</li>
+          </ul>
         </div>
-          <footer  class="footer bg-dark">
-            <div class="container">
-              <span class="text-white">© <script>document.write(new Date().getFullYear())</script>, Calin Gilan</span>
-            </div>
-          </footer>
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    </body>
+        <div class="col-md-4">
+          <h2>Contact</h2>
+          <p>Contact me using LinkedIn or Email!</p>
+          <ul class="icon-list">
+            <li class="bi bi-envelope-fill"><a href="mailto:hello@calingilan.com">hello@calingilan.com</a></li>
+            <li><a href='https://www.linkedin.com/in/calin-gilan/'>My LinkedIn</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h2>Articles</h2>
+          <p>Articles about interesting problems I have encountered!</p>
+          <ul class="icon-list">
+            <li><a
+                href="https://medium.com/@califlower/creating-a-modern-react-single-page-app-in-asp-net-mvc-be4ed86da73a">Using
+                React with ASP.Net Classic</a></li>
+          </ul>
+        </div>
+      </div>
+    </main>
+    <footer class="pt-5 my-5 text-muted border-top">
+      <div class="container">
+        <script>document.write(new Date().getFullYear())</script>, Calin Gilan
+      </div>
+    </footer>
+  </div>
+
+
+</body>
+
 </html>
