--- a/jared/jared.html
+++ b/jared/jared.html
@@ -388,7 +388,7 @@
     reset() {
       state.pursuit = 30; state.confidence = 62; state.ick = 18;
       state.chillStreak = 0; state.alive = true; state.tick = 0;
-      log(`<b>New arc.</b> Jared promises to be so normal.`);
+      log(`<b>New arc.</b> Jared promises to not be a little slut.`);
     },
     wife() {
       const btn = this; actionCooldown(btn); if (!state.alive) return;
