--- a/index.html
+++ b/index.html
@@ -35,8 +35,15 @@
     h1 {
       font-size: 2.5rem;
       font-weight: 600;
-      margin-bottom: 1rem;
+      margin-bottom: 0.5rem;
       color: #000;
+    }
+
+    .subtitle {
+      font-size: 1.125rem;
+      font-weight: 500;
+      color: #4a4a4a;
+      margin-bottom: 0.75rem;
     }
 
     .location {
@@ -134,6 +141,10 @@
         font-size: 2rem;
       }
 
+      .subtitle {
+        font-size: 1.125rem;
+      }
+
       .intro {
         font-size: 1rem;
       }
@@ -149,6 +160,7 @@
   <div class="container">
     <header>
       <h1>Calin Gilan</h1>
+      <p class="subtitle">Senior Software Engineer @ Twilio</p>
       <p class="location">
         <svg class="location-icon" viewBox="0 0 24 24" fill="currentColor">
           <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
