Add Jekyll blog with first post on NYC doorbell automation
- Set up Jekyll scaffolding with minimal config
- Add blog post layout with serif typography and syntax highlighting
- Create blog index page
- Add first post: automating apartment doorbell with Raspberry Pi
- Include utterances comments integration
- Add Writing section to homepage

--- a/index.html
+++ b/index.html
@@ -192,9 +192,10 @@
       </section>
 
       <section>
-        <h2>Publications</h2>
+        <h2>Writing</h2>
         <ul>
-          <li><a href="https://medium.com/@califlower/creating-a-modern-react-single-page-app-in-asp-net-mvc-be4ed86da73a">React and ASP.NET</a></li>
+          <li><a href="/blog/">Blog</a></li>
+          <li><a href="https://medium.com/@califlower/creating-a-modern-react-single-page-app-in-asp-net-mvc-be4ed86da73a">React and ASP.NET (Medium)</a></li>
         </ul>
       </section>
     </main>
